# exao_dap

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  flake.nix  init-python.sh  manage.py  pyproject.toml  registrar_datasets.json  requirements.txt  run.sh  setup.py  yeet.sh
exao_dap/: asgi.py  cyverse.py  extensions.py  global_settings.py  settings.py.example  urls.py  utils.py  views.py  wsgi.py
exao_dap/registrar/: admin.py  filters.py  forms.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
exao_dap/registrar/management/commands/: fake_registry.py
exao_dap/registrar/migrations/: 0001_initial.py
exao_dap/registrar/templates/: dataset_detail.html  dataset_list.html  datum_list.html  datum_processing.html  storefile_list.html
exao_dap/registrar/templates/registrar/: dataset_snippet.html  ingest.html  meta_snippet.html  overview.html
exao_dap/registry/: models.py
exao_dap/registry/migrations/: 0001_initial.py
exao_dap/templates/: about.html  base.html  home.html  home_logged_in.html  home_logged_out.html  user_profile.html
exao_dap/templates/django/forms/widgets/: radio.html
exao_dap/templates/includes/: top_navbar.html
exao_dap/templates/registration/: logged_out.html  login.html
exao_dap/undertaker/: apps.py  models.py
frontend/: .gitignore  app.scss  build-assets.sh  framework.sass  index.html  package.json
frontend/NotoSans/: NotoSans.css
