[tool.poetry]
name = "exao_dap"
version = "0.1.0"
description = ""
authors = ["Joseph Long <github@joseph-long.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"
social-auth-app-django = "^4.0"
django-extensions = "^3.1"
gunicorn = "^20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
